<resources>
    <string name="app_name">FIDOApiExample</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="u2f_operations">U2F Operations</string>
    <string name="register_token">Register Token</string>
    <string name="auth_token">Authenticate Token</string>
    <string name="register">Register</string>
    <string name="auth">Authenticate</string>
    <string name="allow_reregistration">Allow Re-registration</string>

    <string name="open_source">Open Source</string>
    <string name="github">GitHub</string>
    <string name="all_reregistration">Allow Reregistration</string>
<!--
    <string name="github_location"><a href='https://github.com/google/u2f-ref-code'>Open Source</a></string>
-->
    <string name="github_location">https://github.com/google/u2f-ref-code</string>
    <string name="google_app_id">328118578376</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed out</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
